<resources>
    <string name="app_name">zfu-FeelsBook</string>

    <string name="Love">Love</string>
    <string name="Joy">Joy</string>
    <string name="Surprise">Surprise</string>
    <string name="Anger">Anger</string>
    <string name="Sadness">Sadness</string>
    <string name="Fear">Fear</string>

    <string name="Records">Records</string>
    <string name="Comment1">Leave some Comments? (optional)</string>
    <string name="Edit">Edit</string>
    <string name="Clear">Clear</string>

    <string name="Emotion">Emotion:</string>
    <string name="Date">Date:</string>
    <string name="Comment2">Comment:</string>
    <string name="Input">Input the changes.</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
    <string name="Count">Count</string>
</resources>
